--- a/index.html
+++ b/index.html
@@ -27,5 +27,72 @@
 		</div>
 	</main>
 
+	<section class="container menu">
+		<h1 class="grid-4 title">Menu</h1>
+		<div class="grid-7 offset-1">
+			<div class="menu-item">
+				<img src="img/prato-1.png" alt="Pratos de entrada do Le Scone">
+				<h2>Entradas</h2>
+				<ul>
+					<li><span>R$1,70</span>Ovos Mexidos</li>
+					<li><span>R$2,50</span>Scones de Frutas</li>
+					<li><span>R$3,25</span>Joelho de Queijo</li>
+					<li><span>R$4,00</span>Presunto Cozido</li>
+					<li><span>R$4,99</span>Coxinha de Frango</li>
+				</ul>
+			</div>
+			<div class="menu-item">
+				<img src="img/prato-2.png" alt="Pratos principais do Le Scone">
+				<h2>Pratos Principais</h2>
+				<ul>
+					<li><span>R$19.99</span>Penne com Queijo</li>
+					<li><span>R$20,50</span>Feijoada</li>
+					<li><span>R$27,00</span>Costela ao Molho</li>
+					<li><span>R$31,50</span>Medalhão de Frango</li>
+					<li><span>R$34,99</span>Camarão na Moranga</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="container contact">
+		<h1 class="grid-4 title">Contato</h1>
+		<div class="grid-7 offset-1">
+			<form action="">
+				<label for="name">Nome</label>
+				<input type="text" name="name" id="name">
+				<div class="row">
+					<div class="grid-7">
+						<label for="email">E-mail</label>
+						<input type="email" name="email" id="email">
+					</div>
+					<div class="grid-5">
+						<label for="tel">Telefone</label>
+						<input type="tel" name="tel" id="tel">
+					</div>
+				</div>
+				<label for="msg">Mensagem</label>
+				<textarea name="msg" id="msg"></textarea>
+				<input class="button" type="button" value="Enviar">
+			</form>
+			<div class="contact-info">
+				<p>contato@lescone.com ////</p>
+				<p>+55 013 11111-1111 ////</p>
+			</div>
+			<a href="#" class="contact-map">
+				<img src="img/map.png" alt="Como chegar na Le Scone">
+			</a>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<p>Le Scone © 1989 - 2016. Desenvolvido por <a href="https://github.com/devMagno" target="_blank">Guilherme Magno</a></p>
+			<a href="#">
+				<img src="img/lescone-icone.png" alt="Ícone Le Scone">
+			</a>
+		</div>
+	</footer>
+
 </body>
 </html>
