Adiciona classes para estilização da seção intro

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 	<main class="container intro">
 		<div class="grid-5">
-			<img src="/img/lescone.png" alt="Le Scone">
+			<img src="/img/lescone.png" alt="Le Scone" class="logo">
 			<div class="intro-info">
 				<p>De Seg. à Sab. <span class="open"></span><br>
 					das 07:00h às 18:00h</p>
-				<address>Praia do Boqueirão, 150<br>
-					Santos - SP</address>
+				<p><address>Praia do Boqueirão, 150<br>
+					Santos - SP</address></p>
 			</div>
 			<p class="intro-tel">+55 013 11111-1111</p>
 		</div>
 		<div class="grid-7">
-			<img src="img/foto.jpg" alt="Cozinha do Le Scone">
+			<img src="img/foto.jpg" alt="Cozinha do Le Scone" class="intro-img">
 		</div>
 	</main>
 
