Corrige src do logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<main class="container intro">
 		<div class="grid-5">
-			<img src="/img/lescone.png" alt="Le Scone" class="logo">
+			<img src="img/lescone.png" alt="Le Scone" class="logo">
 			<div class="intro-info">
 				<p>De Seg. à Sab. <span class="open"></span><br>
 					das 07:00h às 18:00h</p>
